Fixed NM Versioning

--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -1,7 +1,7 @@
 #At this moment those placeholders are in the messages supported:
 #
 # %playername%
-# %nickmame%
+# %displayname%
 # %server%
 #
 # on server switch there is one extra placeholder: %prevserver%
